Fix fake bold issue on Safari

--- a/assets/styles/pre.css
+++ b/assets/styles/pre.css
@@ -8,6 +8,7 @@
     font-style: normal;
     font-display: swap;
     src: url("../resources/JetBrainsMono.woff2") format("woff2-variations");
+    font-weight: 400 700;
   }
 
   * {
